feat: refactor piston